MDEV-342: Do not mark old binlog file as cleanly closed during rotate until the new file is fully synced to disk and binlog index. This fixes a window where a crash would leave next server restart unable to detect that a crash occured, causing recovery to fail.